# physics_rust

./: Cargo.toml  egui-slider.patch  index.html
assets/: palettes.ron
src/: app.rs  config.rs  cursor.rs  lib.rs  main.rs  measures.rs  mouse_select.rs  palette.rs  skin.rs  ui.rs  update_from.rs
src/demo/: lasers.rs  mod.rs  newton_cradle.rs
src/grid/: mod.rs
src/mouse/: button.rs  mod.rs  move.rs  select.rs  wheel.rs
src/objects/: hinge.rs  laser.rs  mod.rs  phy_obj.rs
src/tools/: add_object.rs  drag.rs  mod.rs  move.rs  pan.rs  rotate.rs
src/ui/: cursor.rs  custom_slider.rs  custom_widget.rs  icon_button.rs  images.rs  menu_item.rs  plot.rs  scene_actions.rs  selection_overlay.rs  separator_custom.rs  tabs.rs  text_button.rs  toolbar.rs  toolbox.rs  windows.rs
src/ui/windows/: appearance.rs  controller.rs  geom_actions.rs  information.rs  laser.rs  material.rs  menu.rs  menubar.rs  options.rs  plot.rs  scene_actions.rs  text.rs  toolbar.rs  toolbox.rs
src/ui/windows/object/: appearance.rs  collisions.rs  combine_shapes.rs  controller.rs  geom_actions.rs  hinge.rs  information.rs  laser.rs  material.rs  mod.rs  plot.rs  script.rs  selection.rs  text.rs  velocities.rs
src/ui/windows/scene/: background.rs  mod.rs
