[package]
name = "physics_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
bevy = "0.9.1"
bevy_egui = "0.18.0"
#bevy-inspector-egui = "0.14.0"
bevy_rapier2d = { version = "0.19.0", features = ["simd-stable", "wasm-bindgen"] }
bevy_mouse_tracking_plugin = "0.5.0"
bevy_prototype_lyon = "0.7.2"
bevy_turborand = "0.4.2"
ron = "0.8.0"
lyon_path = "1.0.3"
paste = "1.0.11"
derivative = "2.2.0"
itertools = "0.10.5"

[package.metadata.patch.egui]
patches = [
    "egui-slider.patch"
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.83"


[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package.bevy_rapier2d]
opt-level = 3

[[bin]]
name = "physics_rust"
path = "src/main.rs"
