[package]
name = "physics_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.167", features = ["derive"] }
bevy = "0.10.1"
bevy_egui = "0.20.3"
#bevy-inspector-egui = "0.14.0"
bevy_rapier2d = { version = "0.21.0", features = ["simd-stable", "wasm-bindgen"] }
bevy_mouse_tracking_plugin = { version = "0.6.0", git = "https://github.com/JoJoJet/bevy-mouse-tracking.git", rev="e1bebec" }
bevy_prototype_lyon = "0.8.0"
bevy_turborand = "0.5.0"
ron = "0.8.0"
lyon_path = "1.0.3"
paste = "1.0.13"
derivative = "2.2.0"
itertools = "0.11.0"
num-traits = "0.2.15"
bevy_diagnostic = "0.10.1"

[package.metadata.patch.egui]
patches = [
    "egui-slider.patch"
]

[patch.crates-io]
egui = { path = './target/patch/egui-0.21.0' }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.17"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"


[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package.bevy_rapier2d]
opt-level = 3

[[bin]]
name = "physics_rust"
path = "src/main.rs"
